--- a/FYP-web/Homepage/index.html
+++ b/FYP-web/Homepage/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stye.css">
-    <script src="script.js" defer></script>
-    <title>Document</title>
+    <title>FYP Leader</title>
 </head>
 <body>
     
+    <script src="script.js"></script>
 </body>
 </html>
