--- a/FYP-web/Homepage/index.html
+++ b/FYP-web/Homepage/index.html
@@ -1,13 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stye.css">
-    <title>FYP Leader</title>
-</head>
-<body>
-    
-    <script src="script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="../../assets/favicon.ico" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+    <title>efwaipiel - alam sutera</title>
+  </head>
+  <body>
+    <nav id="navbar-container">
+      <a href="./index.html" id="logo-fypl"><img src="../../assets/logo.PNG" alt="logo" id="logo-nav"
+      /></a>
+
+      <div>
+        <ul id="resp-nav">
+          <li><a href="./fyp.html">fyp</a></li>
+          <li><a href="./faq.html">faq</a></li>
+          <a href="#" id="close"
+            ><img src="../../assets/x-button.png" alt=""
+          /></a>
+        </ul>
+      </div>
+
+      <div id="mobile">
+        <i id="bar"><img src="../../assets/drop-button.png" alt=""/></i>
+      </div>
+    </nav>
+
+    <div class="title-home">
+      <h1>courious about-</h1>
+      <h1>fyp orientation?</h1>
+      <button><a href="./fyp.html">find your answer here!</a></button>
+    </div>
+
+    <script src="./script.js"></script>
+  </body>
 </html>
