Logo + hover main

--- a/FYP-web/Homepage/index.html
+++ b/FYP-web/Homepage/index.html
@@ -21,7 +21,7 @@
     <title>efwaipiel - alam sutera</title>
   </head>
   <body>
-    <nav id="navbar-container">
+    <!-- <nav id="navbar-container">
       <a href="./index.html" id="logo-fypl"><img src="../../assets/logo.PNG" alt="logo" id="logo-nav"
       /></a>
 
@@ -38,7 +38,7 @@
       <div id="mobile">
         <i id="bar"><img src="../../assets/drop-button.png" alt=""/></i>
       </div>
-    </nav>
+    </nav> -->
 
     <div class="title-home">
       <h1>courious about-</h1>
