--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -27,7 +27,11 @@
 
       <div>
         <ul id="resp-nav">
-          <li><a href="./fyp.html">fyp</a></li>
+          <div class="kotak-1">
+            <div class="kotak-2">
+              <li><a href="./fyp.html">fyp</a></li>
+            </div>
+          </div>
           <li><a href="./faq.html">faq</a></li>
           <a href="#" id="close"
             ><img src="../../assets/x-button.png" alt=""
