--- a/FYP-web/Homepage/index.html
+++ b/FYP-web/Homepage/index.html
@@ -20,7 +20,7 @@
     />
     <title>efwaipiel - alam sutera</title>
   </head>
-  <body>
+  <div class="moving-background"></div>
     <!-- <nav id="navbar-container">
       <a href="./index.html" id="logo-fypl"><img src="../../assets/logo.PNG" alt="logo" id="logo-nav"
       /></a>
