building fyp-page

--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -22,7 +22,8 @@
   </head>
   <body>
     <nav id="navbar-container">
-      <a href="./index.html" id="logo-fypl"><img src="../../assets/logo.PNG" alt="logo" id="logo-nav"
+      <a href="./index.html" id="logo-fypl"
+        ><img src="../../assets/logo.PNG" alt="logo" id="logo-nav"
       /></a>
 
       <div>
@@ -40,9 +41,39 @@
       </div>
 
       <div id="mobile">
-        <i id="bar"><img src="../../assets/drop-button.png" alt=""/></i>
+        <i id="bar"><img src="../../assets/drop-button.png" alt="" /></i>
       </div>
     </nav>
+
+    <div class="first-card">
+      <div>
+        <h1>what is fyp?</h1>
+        <p>your first step into the binusian journey.</p>
+        <p>a space to explore, connect, and grow—without the pressure.</p>
+        <p>
+          you'll meet awesome friends, discover new passions, and get a feel for
+          what uni life is really like.
+        </p>
+        <p>
+          expect fun events, creative projects, and chill moments that help you
+          settle in. it's not just orientation—it's the start of something big.
+        </p>
+        <p>welcome to binus, your story starts here.</p>
+      </div>
+    </div>
+
+    <div class="card-faq">
+      <h1>want to know more about fyp?</h1>
+      <button><a href="./faq.html">click here!</a></button>
+    </div>
+
+    <footer>
+      <p>see you in fyp! - @efwaipiel.alsut</p>
+      <a
+        href="https://www.instagram.com/efwaipiel.alsut?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+        ><img src="../../assets/instagram.png" alt="instagram-logo"
+      /></a>
+    </footer>
 
     <script src="./script.js"></script>
   </body>
