--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -59,7 +59,11 @@
     </div>
 
     <div class="card-faq">
-      <h1>want to know more about fyp?</h1>
+      <div>
+        <h1>want to know</h1>
+        <h1>more about fyp?</h1>
+      </div>
+      
       <button><a href="./faq.html">click here!</a></button>
     </div>
 
