--- a/FYP-web/Homepage/faq.html
+++ b/FYP-web/Homepage/faq.html
@@ -22,8 +22,9 @@
   </head>
   <body>
     <nav id="navbar-container">
-      <a href="./index.html" id="logo-fypl"><img src="../../assets/logo.PNG" alt="logo" id="logo-nav"
-      /></a>
+      <a href="./index.html" id="logo-fypl">
+        <img src="../../assets/logo.PNG" alt="logo" id="logo-nav"/>
+      </a>
 
       <div>
         <ul id="resp-nav">
@@ -223,12 +224,9 @@
     </div>
 
     <div id="faq-button">
-      <button>
-        <a
-          href="https://www.instagram.com/efwaipiel.alsut?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-          >dm us for another question</a
-        >
-      </button>
+      <a href="https://www.instagram.com/efwaipiel.alsut?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
+        dm us for another question
+      </a>
     </div>
 
     <script src="./script.js"></script>
