--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -60,7 +60,7 @@
 
     <div class="card-faq">
       <h1>want to know more about fyp?</h1>
-      <button><a href="./faq.html">click here!</a></button>
+      <a href="./faq.html">click here!</a>
     </div>
 
     <footer>
