--- a/FYP-web/Homepage/index.html
+++ b/FYP-web/Homepage/index.html
@@ -43,7 +43,7 @@
     <div class="title-home">
       <h1>courious about-</h1>
       <h1>fyp orientation?</h1>
-      <button><a href="./fyp.html">find your answer here!</a></button>
+      <a href="./fyp.html">find your answer here!</a>
     </div>
 
     <script src="./script.js"></script>
