--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -58,6 +58,14 @@
       </div>
     </div>
 
+    <div class="testimonial">
+      <h1>testimonial</h1>
+      <div class="card-testi">
+        <img src="../../assets/shae-testi.png" alt="">
+        <img src="../../assets/teo-testi.png" alt="">
+      </div>
+    </div>
+
     <div class="card-faq">
       <div>
         <h1>want to know</h1>
