--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -98,8 +98,8 @@
           const bgImages = [
             "../../assets/card-1.png",
             "../../assets/card-2.png",
-            "../../assets/card-3.png",
-            "../../assets/card-4.png"
+            "../../assets/card-3.jpeg",
+            "../../assets/card-4.jpeg"
           ];
         
           let current = 0;
