update-fypl-page

--- a/FYP-web/Homepage/fypl.html
+++ b/FYP-web/Homepage/fypl.html
@@ -46,6 +46,135 @@
     </div>
 
     <div class="container-fypl">
+      <h1>global business management</h1>
+      <p>making deals across the world</p>
+      <div class="card-fypl">
+        <div class="fypl-solo">
+          <img src="../../assets/shae-gbm.JPG" alt="">
+          <p>shaena fazila rachman</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fypl">
+      <h1>management</h1>
+      <p>leading chaos, one plan daily</p>
+      <div class="card-fypl">
+        <div class="fypl-solo">
+          <img src="../../assets/alysia-management.JPG" alt="">
+          <p>alysia kharlotta</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fypl">
+      <h1>business creation</h1>
+      <p>start stuff, break rules, repeat</p>
+      <div class="card-fypl">
+        <div class="fypl-solo">
+          <img src="../../assets/fadil-bc.JPG" alt="">
+          <p>muhammad fadhil habi</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fypl">
+      <h1>film</h1>
+      <p>lights, camera, chaos, and vibes</p>
+      <div class="card-fypl">
+        <div class="fypl-solo">
+          <img src="../../assets/vanya-film.JPG" alt="">
+          <p>vanya aurelia budiman</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fypl">
+      <h1>school of accounting</h1>
+      <p>numbers whisper, we make sense</p>
+      <div class="card-fypl">
+        <div class="fypl-solo">
+          <img src="../../assets/nat-soa.JPG" alt="">
+          <p>nathalie audrey christabel gultom</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fypl">
+      <h1>visual communication design</h1>
+      <p>we make pixels talk loud</p>
+      <div class="card-fypl">
+        <div class="fypl-solo">
+          <img src="../../assets/jo-dkv.JPG" alt="">
+          <p>jonathan lin</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fypl">
+      <h1>faculty of digital communication and hotel and tourism</h1>
+      <p>talk smooth, host cooler than ice</p>
+      <div class="card-fypl">
+        <div class="fypl-solo">
+          <img src="../../assets/hibran-hotel.JPG" alt="">
+          <p>hibran aditira</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fypl">
+      <h1>faculty of engineering</h1>
+      <p>build things, break sleep schedules</p>
+      <div class="card-fypl">
+        <div class="fypl-solo">
+          <img src="../../assets/nandya_foe.JPG" alt="">
+          <p>nandya zahra armevia</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fypl">
+      <h1>faculty of humanities</h1>
+      <p>feelings, thoughts, and deep dives</p>
+      <div class="card-fypl">
+        <div class="fypl-solo">
+          <img src="../../assets/ancilla-foh.JPG" alt="">
+          <p>maura ancilla paramaputri</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fypl">
+      <h1>international business management</h1>
+      <p>global hustle, local impact vibes</p>
+      <div class="card-fypl">
+        <div class="fypl-left">
+          <img src="../../assets/jess.JPG" alt="">
+          <p>jessica trishya hendra w.</p>
+        </div>
+        <div class="fypl-right">
+          <img src="../../assets/geb.JPG" alt="">
+          <p>gabriel felande aulia</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fypl">
+      <h1>school of information system</h1>
+      <p>why sql, python feels like nuts?</p>
+      <div class="card-fypl">
+        <div class="fypl-left">
+          <img src="../../assets/vin.JPG" alt="">
+          <p>vincent</p>
+        </div>
+        <div class="fypl-right">
+          <img src="../../assets/bagas.JPG" alt="">
+          <p>benedictus bagas putra h.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fypl">
       <h1>school of computer science</h1>
       <p>code-ing nerds? here's the peoples</p>
       <div class="card-fypl">
@@ -59,8 +188,6 @@
         </div>
       </div>
     </div>
-
-
 
     <footer>
       <p>see you in fyp! - @efwaipiel.alsut</p>
