--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <nav id="navbar-container">
-      <a href="./index.html" id="logo-fypl"
+      <a href="./fyp.html" id="logo-fypl"
         ><img src="../../assets/logo.PNG" alt="logo" id="logo-nav"
       /></a>
 
@@ -30,6 +30,7 @@
         <ul id="resp-nav">
           <li><a href="./fyp.html">fyp</a></li>
           <li><a href="./faq.html">faq</a></li>
+          <li><a href="./fypl.html">fypl</a></li>
           <a href="#" id="close"
             ><img src="../../assets/x-button.png" alt=""
           /></a>
