--- a/FYP-web/Homepage/fypl.html
+++ b/FYP-web/Homepage/fypl.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <nav id="navbar-container">
-      <a href="./index.html" id="logo-fypl"
+      <a href="./fyp.html" id="logo-fypl"
         ><img src="../../assets/logo.PNG" alt="logo" id="logo-nav"
       /></a>
 
@@ -187,6 +187,11 @@
           <p>teo apriyandi</p>
         </div>
       </div>
+    </div>
+
+    <div class="register-card">
+      <h1>register yourself now!</h1>
+      <a href="https://freshmen.apps.binus.ac.id">go to freshman apps</a>
     </div>
 
     <footer>
