--- a/FYP-web/Homepage/faq.html
+++ b/FYP-web/Homepage/faq.html
@@ -230,6 +230,19 @@
       </a>
     </div>
 
+    <div class="register-card">
+      <h1>register yourself now!</h1>
+      <a href="https://freshmen.apps.binus.ac.id">go to freshman apps</a>
+    </div>
+
+    <footer>
+      <p>see you in fyp! - @efwaipiel.alsut</p>
+      <a
+        href="https://www.instagram.com/efwaipiel.alsut?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+        ><img src="../../assets/instagram.png" alt="instagram-logo"
+      /></a>
+    </footer>
+
     <script src="./script.js"></script>
   </body>
 </html>
