--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -78,6 +78,11 @@
       <a href="./faq.html">click here!</a>
     </div>
 
+    <div class="register-card">
+      <h1>register yourself now!</h1>
+      <a href="https://freshmen.apps.binus.ac.id">go to freshman apps</a>
+    </div>
+
     <footer>
       <p>see you in fyp! - @efwaipiel.alsut</p>
       <a
