--- a/FYP-web/Homepage/faq.html
+++ b/FYP-web/Homepage/faq.html
@@ -31,6 +31,7 @@
           <li><a href="./fyp.html">fyp</a></li>
           <li><a href="./faq.html">faq</a></li>
           <li><a href="./fypl.html">fypl</a></li>
+          <li><a href="https://freshmen.apps.binus.ac.id">register</a></li>
           <a href="#" id="close"
             ><img src="../../assets/x-button.png" alt=""
           /></a>
