--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -64,7 +64,7 @@
     <div class="timeline-container">
 
       <div class="title-timeline">
-        <h1>see our timeline</h1>
+        <h1>see our timeline!</h1>
         <p>first year program 2029</p>
       </div>
       
@@ -171,7 +171,7 @@
     </div>
 
     <div class="testimonial" id="content-section">
-      <h1>insight</h1>
+      <h1>chaperone insight</h1>
       <p>what ex f.chaperone says?</p>
       <div class="card-testi">
         <img src="../../assets/shae-testi.png" alt="" />
