--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -73,99 +73,83 @@
 
       <div class="timeline-item">
         <div class="timeline-content">
-          <div class="album-title">ROCK STEP</div>
-          <div class="track-title">Mogwai</div>
+          <div class="album-title">may - 17 august</div>
+          <div class="track-title">pre fyp</div>
         </div>
         <div class="timeline-dot"></div>
       </div>
 
       <div class="timeline-item">
         <div class="timeline-content">
-          <div class="album-title">YOUNG TEAM</div>
-          <div class="track-title">Sigur Rós</div>
+          <div class="album-title">3 july</div>
+          <div class="track-title">kick off fypl - fl - fp</div>
         </div>
         <div class="timeline-dot"></div>
       </div>
 
       <div class="timeline-item">
         <div class="timeline-content">
-          <div class="album-title">LIFT YOUR SKINNY FISTS...</div>
-          <div class="track-title">Explosions In The Sky</div>
+          <div class="album-title">4 - 5 july</div>
+          <div class="track-title">training fl fp</div>
         </div>
         <div class="timeline-dot"></div>
       </div>
 
       <div class="timeline-item">
         <div class="timeline-content">
-          <div class="album-title">F# A# ∞</div>
-          <div class="track-title">This Will Destroy You</div>
-          <div class="track-note">symphonic noise / orchestrated ambience</div>
+          <div class="album-title">14 - 16 august</div>
+          <div class="track-title">briefing fl fypl</div>
+          <div class="track-note">all must attend!</div>
         </div>
         <div class="timeline-dot"></div>
       </div>
 
       <div class="timeline-item">
         <div class="timeline-content">
-          <div class="album-title">THE EARTH IS NOT...</div>
-          <div class="track-title">Thee Silver Mount Zion</div>
-          <div class="track-note">13.45 min / Full movement</div>
+          <div class="album-title">18 august</div>
+          <div class="track-title">opening fyp b2029</div>
+          <div class="track-note">all must attend!</div>
         </div>
         <div class="timeline-dot"></div>
       </div>
 
       <div class="timeline-item">
         <div class="timeline-content">
-          <div class="album-title">LIFTED</div>
-          <div class="track-title">Godspeed You! Black Emperor</div>
-          <div class="track-note">best metal rock / strongest dynamic</div>
+          <div class="album-title">18 - 27 august</div>
+          <div class="track-title">"next"</div>
+          <!-- <div class="track-note">best metal rock / strongest dynamic</div> -->
         </div>
         <div class="timeline-dot"></div>
       </div>
 
       <div class="timeline-item">
         <div class="timeline-content">
-          <div class="album-title">F# A# ∞</div>
-          <div class="track-title">God Is An Astronaut</div>
-          <div class="track-note">perfection of post-rock dynamics</div>
+          <div class="album-title">28 - 3 sept</div>
+          <div class="track-title">academic experience</div>
+          <!-- <div class="track-note">perfection of post-rock dynamics</div> -->
         </div>
         <div class="timeline-dot"></div>
       </div>
 
       <div class="timeline-item">
         <div class="timeline-content">
-          <div class="album-title">TAKK...</div>
-          <div class="track-title">Tides From Nebula</div>
-          <div class="track-note">significant vocals / pure</div>
+          <div class="album-title">2 - 3 sept</div>
+          <div class="track-title">"next" follow-up</div>
+          <!-- <div class="track-note">significant vocals / pure</div> -->
         </div>
         <div class="timeline-dot"></div>
       </div>
 
       <div class="timeline-item">
         <div class="timeline-content">
-          <div class="album-title">ROCK STEP</div>
-          <div class="track-title">65 Days Of Static</div>
-        </div>
-        <div class="timeline-dot"></div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-content">
-          <div class="album-title">LITTLE</div>
-          <div class="track-title">Mono/achewill</div>
-        </div>
-        <div class="timeline-dot"></div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-content">
-          <div class="album-title">EL TEN ELEVEN</div>
-          <div class="track-title">El Ten Eleven</div>
+          <div class="album-title">4 sept</div>
+          <div class="track-title">inaguration</div>
         </div>
         <div class="timeline-dot"></div>
       </div>
 
       <div class="timeline-end">
-
+        <p></p>
       </div>
 
     </div>
