--- a/FYP-web/Homepage/faq.html
+++ b/FYP-web/Homepage/faq.html
@@ -232,7 +232,7 @@
     </div>
 
     <div class="register-card">
-      <h1>register yourself now!</h1>
+      <h1>register now!</h1>
       <a href="https://freshmen.apps.binus.ac.id">go to freshman apps</a>
     </div>
 
