--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -197,9 +197,9 @@
       document.addEventListener("DOMContentLoaded", () => {
         const bgImages = [
           "../../assets/card-1.png",
-          "../../assets/card-2.png",
-          "../../assets/card-3.jpeg",
-          "../../assets/card-4.jpeg",
+          "../../assets/card-2.jpg",
+          "../../assets/card-3.jpg",
+          "../../assets/card-4.jpg",
         ];
 
         let current = 0;
