--- a/FYP-web/Homepage/fypl.html
+++ b/FYP-web/Homepage/fypl.html
@@ -226,7 +226,7 @@
     </footer>
 
     <script src="./script.js"></script>
-    <script>
+    <!-- <script>
       document.addEventListener('DOMContentLoaded', function() {
         // Set up konfeti untuk setiap kartu
         setupConfettiEffect('card1', 'confettiContainer1');
@@ -364,7 +364,7 @@
                 if (callback) callback();
             }, (maxDuration + 0.2) * 1000);
         }
-    });
+    }); -->
   </script>
   </body>
 </html>
