--- a/FYP-web/Homepage/index.html
+++ b/FYP-web/Homepage/index.html
@@ -40,7 +40,7 @@
     </nav> -->
 
     <div class="title-home">
-      <h1>curious about-</h1>
+      <h1>courious about-</h1>
       <h1>fyp orientation?</h1>
       <a href="./fyp.html">find your answer here!</a>
     </div>
