--- a/FYP-web/Homepage/faq.html
+++ b/FYP-web/Homepage/faq.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../../assets/favicon.ico" />
+    <link rel="icon" href="../assets/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -23,7 +23,7 @@
   <body>
     <nav id="navbar-container">
       <a href="./fyp.html" id="logo-fypl">
-        <img src="../../assets/logo.PNG" alt="logo" id="logo-nav"/>
+        <img src="../assets/logo.PNG" alt="logo" id="logo-nav"/>
       </a>
 
       <div>
@@ -39,7 +39,7 @@
       </div>
 
       <div id="mobile">
-        <i id="bar"><img src="../../assets/drop-button.png" alt="" /></i>
+        <i id="bar"><img src="../assets/drop-button.png" alt="" /></i>
       </div>
     </nav>
 
@@ -240,7 +240,7 @@
       <p>see you in fyp! - @efwaipiel.alsut</p>
       <a
         href="https://www.instagram.com/efwaipiel.alsut?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-        ><img src="../../assets/instagram.png" alt="instagram-logo"
+        ><img src="../assets/instagram.png" alt="instagram-logo"
       /></a>
     </footer>
 
