--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../../assets/favicon.ico" />
+    <link rel="icon" href="../assets/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -23,7 +23,7 @@
   <body>
     <nav id="navbar-container">
       <a href="./fyp.html" id="logo-fypl"
-        ><img src="../../assets/logo.PNG" alt="logo" id="logo-nav"
+        ><img src="../assets/logo.PNG" alt="logo" id="logo-nav"
       /></a>
 
       <div>
@@ -33,13 +33,13 @@
           <li><a href="./fypl.html">fypl</a></li>
           <li><a href="https://freshmen.apps.binus.ac.id">register</a></li>
           <a href="#" id="close"
-            ><img src="../../assets/x-button.png" alt=""
+            ><img src="../assets/x-button.png" alt=""
           /></a>
         </ul>
       </div>
 
       <div id="mobile">
-        <i id="bar"><img src="../../assets/drop-button.png" alt="" /></i>
+        <i id="bar"><img src="../assets/drop-button.png" alt="" /></i>
       </div>
     </nav>
 
@@ -158,8 +158,8 @@
       <h1>chaperone insight</h1>
       <p>what ex f.chaperone says?</p>
       <div class="card-testi">
-        <img src="../../assets/shae-testi.png" alt="" />
-        <img src="../../assets/teo-testi.png" alt="" />
+        <img src="../assets/shae-testi.png" alt="" />
+        <img src="../assets/teo-testi.png" alt="" />
       </div>
     </div>
 
@@ -181,7 +181,7 @@
       <p>see you in fyp! - @efwaipiel.alsut</p>
       <a
         href="https://www.instagram.com/efwaipiel.alsut?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-        ><img src="../../assets/instagram.png" alt="instagram-logo"
+        ><img src="../assets/instagram.png" alt="instagram-logo"
       /></a>
     </footer>
 
@@ -196,10 +196,10 @@
 
       document.addEventListener("DOMContentLoaded", () => {
         const bgImages = [
-          "../../assets/card-1.png",
-          "../../assets/card-2.jpg",
-          "../../assets/card-3.jpg",
-          "../../assets/card-4.jpg",
+          "../assets/card-1.png",
+          "../assets/card-2.jpg",
+          "../assets/card-3.jpg",
+          "../assets/card-4.jpg",
         ];
 
         let current = 0;
