--- a/FYP-web/Homepage/fypl.html
+++ b/FYP-web/Homepage/fypl.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../assets/favicon.ico" />
+    <link rel="icon" href="assets/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -23,7 +23,7 @@
   <body>
     <nav id="navbar-container">
       <a href="./fyp.html" id="logo-fypl"
-        ><img src="../assets/logo.PNG" alt="logo" id="logo-nav"
+        ><img src="assets/logo.PNG" alt="logo" id="logo-nav"
       /></a>
 
       <div>
@@ -33,13 +33,13 @@
           <li><a href="./fypl.html">fypl</a></li>
           <li><a href="https://freshmen.apps.binus.ac.id">register</a></li>
           <a href="#" id="close"
-            ><img src="../assets/x-button.png" alt=""
+            ><img src="assets/x-button.png" alt=""
           /></a>
         </ul>
       </div>
 
       <div id="mobile">
-        <i id="bar"><img src="../assets/drop-button.png" alt="" /></i>
+        <i id="bar"><img src="assets/drop-button.png" alt="" /></i>
       </div>
     </nav>
     
@@ -53,7 +53,7 @@
       <p>making deals across the world</p>
       <div class="card-fypl">
         <div class="fypl-solo" id="card1">
-          <img src="../assets/shae-gbm.JPG" alt="">
+          <img src="assets/shae-gbm.JPG" alt="">
           <p>shaena fazila rachman</p>
         </div>
         <div class="confetti-container" id="confettiContainer1"></div>
@@ -65,7 +65,7 @@
       <p>leading chaos, one plan daily</p>
       <div class="card-fypl">
         <div class="fypl-solo" id="card2">
-          <img src="../assets/alysia-management.JPG" alt="">
+          <img src="assets/alysia-management.JPG" alt="">
           <p>alysia kharlotta</p>
         </div>
         <div class="confetti-container" id="confettiContainer2"></div>
@@ -77,7 +77,7 @@
       <p>start stuff, break rules, repeat</p>
       <div class="card-fypl" >
         <div class="fypl-solo" id="card3">
-          <img src="../assets/fadil-bc.JPG" alt="">
+          <img src="assets/fadil-bc.JPG" alt="">
           <p>muhammad fadhil habi</p>
         </div>
         <div class="confetti-container" id="confettiContainer3"></div>
@@ -89,7 +89,7 @@
       <p>lights, camera, chaos, and vibes</p>
       <div class="card-fypl" >
         <div class="fypl-solo" id="card4">
-          <img src="../assets/vanya-film.JPG" alt="">
+          <img src="assets/vanya-film.JPG" alt="">
           <p>vanya aurelia budiman</p>
         </div>
         <div class="confetti-container" id="confettiContainer4"></div>
@@ -101,7 +101,7 @@
       <p>numbers whisper, we make sense</p>
       <div class="card-fypl">
         <div class="fypl-solo" id="card5">
-          <img src="../assets/nat-soa.JPG" alt="">
+          <img src="assets/nat-soa.JPG" alt="">
           <p>nathalie audrey christabel gultom</p>
         </div>
         <div class="confetti-container" id="confettiContainer5"></div>
@@ -114,7 +114,7 @@
       <p>we make pixels talk loud</p>
       <div class="card-fypl" >
         <div class="fypl-solo" id="card6">
-          <img src="../assets/jo-dkv.JPG" alt="">
+          <img src="assets/jo-dkv.JPG" alt="">
           <p>jonathan lin</p>
         </div>
         <div class="confetti-container" id="confettiContainer6"></div>
@@ -127,7 +127,7 @@
       <p>talk smooth, host cooler than ice</p>
       <div class="card-fypl" >
         <div class="fypl-solo" id="card7">
-          <img src="../assets/hibran-hotel.JPG" alt="">
+          <img src="assets/hibran-hotel.JPG" alt="">
           <p>hibran aditira</p>
         </div>
         <div class="confetti-container" id="confettiContainer7"></div>
@@ -139,7 +139,7 @@
       <p>build things, break sleep schedules</p>
       <div class="card-fypl" >
         <div class="fypl-solo" id="card8">
-          <img src="../assets/nandya_foe.JPG" alt="">
+          <img src="assets/nandya_foe.JPG" alt="">
           <p>nandya zahra armevia</p>
         </div>
         <div class="confetti-container" id="confettiContainer8"></div>
@@ -151,7 +151,7 @@
       <p>feelings, thoughts, and deep dives</p>
       <div class="card-fypl" >
         <div class="fypl-solo" id="card9">
-          <img src="../assets/ancilla-foh.JPG" alt="">
+          <img src="assets/ancilla-foh.JPG" alt="">
           <p>maura ancilla paramaputri</p>
         </div>
         <div class="confetti-container" id="confettiContainer9"></div>
@@ -164,12 +164,12 @@
       <p>global hustle, local impact vibes</p>
       <div class="card-fypl">
         <div class="fypl-left" id="card10">
-          <img src="../assets/jess.JPG" alt="">
+          <img src="assets/jess.JPG" alt="">
           <p>jessica trishya hendra w.</p>
         </div>
         <div class="confetti-container" id="confettiContainer10"></div>
         <div class="fypl-right" id="card11">
-          <img src="../assets/geb.JPG" alt="">
+          <img src="assets/geb.JPG" alt="">
           <p>gabriel felande aulia</p>
         </div>
         <div class="confetti-container" id="confettiContainer11"></div>
@@ -182,12 +182,12 @@
       <p>why sql, python feels like nuts?</p>
       <div class="card-fypl">
         <div class="fypl-left" id="card12">
-          <img src="../assets/vin.JPG" alt="">
+          <img src="assets/vin.JPG" alt="">
           <p>vincent</p>
         </div>
         <div class="confetti-container" id="confettiContainer12"></div>
         <div class="fypl-right" id="card13">
-          <img src="../assets/bagas.JPG" alt="">
+          <img src="assets/bagas.JPG" alt="">
           <p>benedictus bagas putra h.</p>
         </div>
         <div class="confetti-container" id="confettiContainer13"></div>
@@ -200,12 +200,12 @@
       <p>code-ing nerds? here's the peoples</p>
       <div class="card-fypl">
         <div class="fypl-left" id="card14">
-          <img src="../assets/juan-socs.JPG" alt="">
+          <img src="assets/juan-socs.JPG" alt="">
           <p>juan ariviano c.</p>
         </div>
         <div class="confetti-container" id="confettiContainer14"></div>
         <div class="fypl-right" id="card15">
-          <img src="../assets/teo-socs.JPG" alt="">
+          <img src="assets/teo-socs.JPG" alt="">
           <p>teo apriyandi</p>
         </div>
         <div class="confetti-container" id="confettiContainer15"></div>
@@ -221,7 +221,7 @@
       <p>see you in fyp! - @efwaipiel.alsut</p>
       <a
         href="https://www.instagram.com/efwaipiel.alsut?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-        ><img src="../assets/instagram.png" alt="instagram-logo"
+        ><img src="assets/instagram.png" alt="instagram-logo"
       /></a>
     </footer>
 
