--- a/FYP-web/Homepage/index.html
+++ b/FYP-web/Homepage/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../assets/favicon.ico" />
+    <link rel="icon" href="assets/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -21,7 +21,7 @@
     <title>efwaipiel - alam sutera</title>
   </head>
     <!-- <nav id="navbar-container">
-      <a href="./index.html" id="logo-fypl"><img src="../../assets/logo.PNG" alt="logo" id="logo-nav"
+      <a href="./index.html" id="logo-fypl"><img src="assets/logo.PNG" alt="logo" id="logo-nav"
       /></a>
 
       <div>
@@ -29,13 +29,13 @@
           <li><a href="./fyp.html">fyp</a></li>
           <li><a href="./faq.html">faq</a></li>
           <a href="#" id="close"
-            ><img src="../../assets/x-button.png" alt=""
+            ><img src="assets/x-button.png" alt=""
           /></a>
         </ul>
       </div>
 
       <div id="mobile">
-        <i id="bar"><img src="../../assets/drop-button.png" alt=""/></i>
+        <i id="bar"><img src="assets/drop-button.png" alt=""/></i>
       </div>
     </nav> -->
 
