--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -23,7 +23,7 @@
   <body>
     <nav id="navbar-container">
       <a href="./fyp.html" id="logo-fypl"
-        ><img src="assets/logo.PNG" alt="logo" id="logo-nav"
+        ><img src="assets/Logo.png" alt="logo" id="logo-nav"
       /></a>
 
       <div>
